# grpo_frm_scratch

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.py  xxx.py
configs/: config_gemma_afridoc_mt.yaml  stage3_offloading_accelerate.conf
grpo/: afridoc_mt.py  data_class.py  datasets_classes.py  grpo.py  model_utils.py  prompt.py  rewards.py  train.py
grpo_tutorial/: data_utils.py  model_utils.py  rewards.py
grpo_tutorial/data/: prompt.py  utils.py
tests/: test_dataset_loading.py  test_rewards.py
